Blacklist GPU usage on more old NVIDIA GPUs on macOS.

BUG=676829
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2629513002
Cr-Commit-Position: refs/heads/master@{#443147}

Former-commit-id: 6c75f8a31994a80d6e0b36d27d8885c9ca5d607a